--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="workout_cancel_workout">Cancel Workout</string>
     <string name="exercise_new">New</string>
     <string name="exercise_add">Add</string>
+    <string name="action_save">Save</string>
 </resources>
