--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="exercise_new">New</string>
     <string name="exercise_add">Add</string>
     <string name="action_save">Save</string>
+    <string name="action_delete">Delete</string>
 </resources>
