Extended Color scheme for couple more colors Added Confirmation button with a dialog

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,8 @@
 <resources>
     <string name="app_name">xhvy</string>
     <string name="search_placeholder">Search…</string>
-    <string name="action_confirm">OK</string>
+    <string name="action_ok">OK</string>
+    <string name="action_confirm">Confirm</string>
     <string name="action_cancel">Cancel</string>
     <string name="exercise_list_title">Exercises</string>
     <string name="workout_add_exercise">Add Exercise</string>
