--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,8 @@
     <string name="exercise_list_title">Exercises</string>
     <string name="workout_add_exercise">Add Exercise</string>
     <string name="workout_cancel_workout">Cancel Workout</string>
+    <string name="workout_empty_create">Create Empty Workout</string>
+    <string name="workout_continue">Continue Active Workout</string>
     <string name="exercise_new">New</string>
     <string name="exercise_add">Add</string>
     <string name="action_save">Save</string>
